<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2013 jonas.oreland@gmail.com
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:runnerup="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/tab_interval0"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <org.runnerup.widget.TitleSpinner
            android:id="@+id/step_intensity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/step_intensity_types"
            runnerup:values="@array/step_intensity_values"
            android:prompt="@string/type"
            android:text="@string/step_intensity" />

        <org.runnerup.widget.TitleSpinner
            android:id="@+id/duration_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/duration_types"
            runnerup:values="@array/step_duration_values"
            android:prompt="@string/type"
            android:text="@string/duration_type" />

        <org.runnerup.widget.TitleSpinner
            android:id="@+id/duration_distance_format"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:defaultValue="1000"
            android:inputType="numberDecimal"
            android:prompt="@string/type"
            android:text="@string/duration_distance_format"
            runnerup:type="distancepicker" />

        <org.runnerup.widget.TitleSpinner
            android:id="@+id/duration_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:defaultValue="00:01:00"
            android:inputType="time"
            android:prompt="@string/type"
            android:text="@string/duration_time_format"
            android:visibility="gone"
            runnerup:type="durationpicker" />

        <org.runnerup.widget.TitleSpinner
            android:id="@+id/target_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/target_types"
            runnerup:values="@array/step_target_values"
            android:prompt="@string/type"
            android:text="@string/target_type" />

        <org.runnerup.widget.TitleSpinner
            android:id="@+id/target_pace_mm_low"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:defaultValue="00:05:00"
            android:inputType="time"
            android:prompt="@string/type"
            android:text="@string/low_pace"
            runnerup:type="durationpicker" />

        <org.runnerup.widget.TitleSpinner
            android:id="@+id/target_pace_mm_high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:defaultValue="00:05:30"
            android:inputType="time"
            android:prompt="@string/type"
            android:text="@string/high_pace"
            runnerup:type="durationpicker" />

        <org.runnerup.widget.TitleSpinner
            android:id="@+id/heartrate_zone"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/type"
            android:text="@string/heartrate_zone" />

    </LinearLayout>

</LinearLayout>
