<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2013 jonas.oreland@gmail.com
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:runnerup="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tab_manual"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <org.runnerup.widget.TitleSpinner
        android:id="@+id/manual_sport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:entries="@array/sportEntries"
        android:prompt="@string/type"
        android:text="@string/sport" />

    <org.runnerup.widget.TitleSpinner
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/manual_sport"
        android:prompt="@string/type"
        android:defaultValue="today"
        android:text="@string/date"
        runnerup:type="datepicker" />

    <org.runnerup.widget.TitleSpinner
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/date"
        android:prompt="@string/type"
        android:text="@string/time"
        runnerup:type="timepicker" />

    <org.runnerup.widget.TitleSpinner
        android:id="@+id/duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/time"
        android:prompt="@string/type"
        android:text="@string/duration_time_format"
        android:defaultValue="00:00:00"
        runnerup:type="durationpicker" />

    <org.runnerup.widget.TitleSpinner
        android:id="@+id/distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/duration"
        android:prompt="@string/type"
        android:inputType="numberDecimal"
        android:text="@string/distance"
        runnerup:type="distancepicker" />

    <org.runnerup.widget.TitleSpinner
        android:id="@+id/pace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/distance"
        android:prompt="@string/type"
        android:inputType="numberDecimal"
        android:text="@string/pace"
        runnerup:type="durationpicker" />

    <EditText
        android:id="@+id/manual_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/pace"
        android:layout_alignParentBottom="true"
        android:ems="10"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:hint="@string/add_workout_notes" />

</RelativeLayout>

